# ai-test-lab

./: .gitignore  AGENTS.md  README.md  aba.py  cg1.py  cg2.py  cg3.py  contacts_token.txt  customer_token.txt  dd.py  eCommerce_contacts_token.txt  eCommerce_customer_token.txt  eCommerce_get_by_users.py  fuwushang_tixianshenhe.py  get_by_user.py  it_cg.py  kanjia.py  local_eCommerce_get_by_users.py  local_tag_eCommerce.py  new_qiwei.py  other_settings.py  piliang_chengdai_user.py  piliangshangjia.py  pyproject.toml  qiweibiaoqian.py  qiweibiaoqian_local.py  qywx_token.txt  shenji_data.py  shenji_list.py  support.py  tag_eCommerce.py  tag_eCommerce_token.txt  tag_token.txt  zentao.py  代码.py  城代账号.xlsx
codex-tasks/: 001-foundation.md  002-memory-foundation.md  003-intent-router.md  004-orchestrator-langgraph.md  005-tool-registry-and-mcp.md  006-runtime-cli-and-tests.md  007-review-and-hardening.md  008-memory-review-fixes.md  009-restructure-project-layout.md  010-memory-polish-after-layout.md  011-intent-review-fixes.md  012-industrial-grade-selection-policy.md  013-runtime-memory-write-control.md  015-real-task-validation-and-auth-linkage.md  016-validation-risky-and-memory-tool-split.md  017-mcp-selection-and-security-boundary.md  018-filesystem-read-design-and-safe-adapter.md  019-filesystem-read-local-adapter.md  020-filesystem-read-output-control-and-context.md  021-explicit-multi-file-read-context.md  022-pause-021-and-return-to-mature-tooling.md  023-filesystem-mcp-selection-and-minimal-integration-plan.md  024-filesystem-mcp-manual-confirmation-checklist.md  (+16 more)
(+161 files in other folders)
